k8s_manifests/prometheus/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ui
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  # Use the host you used in your kubernetes Ingress Configurations
  - host: prometheus.localhost
    http:
      paths:
      - backend:
          serviceName: prometheus-service
          servicePort: 8080
  tls:
  - hosts: 
    - prometheus.localhost
